[gd_scene load_steps=5 format=3 uid="uid://cfnu5s4wljmbn"]

[ext_resource type="Script" path="res://scripts/credits.gd" id="1_x0rr2"]
[ext_resource type="VideoStream" path="res://assets/EndCredits.ogv" id="1_xo6lj"]
[ext_resource type="Texture2D" uid="uid://dgfr26fv20lcd" path="res://assets/Gray.png" id="3_4yval"]
[ext_resource type="Texture2D" uid="uid://djoedlxcmdwy4" path="res://assets/Hulk-Tower-Jump.png" id="4_e7ch3"]

[node name="Credits" type="Node"]
script = ExtResource("1_x0rr2")

[node name="End" type="Node" parent="."]

[node name="Background" type="TextureRect" parent="End"]
texture_filter = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_4yval")

[node name="Game" type="TextureRect" parent="End"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -409.0
offset_top = -295.0
offset_right = 684.0
offset_bottom = -192.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
texture = ExtResource("4_e7ch3")

[node name="Title" type="Label" parent="End"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = -115.0
offset_right = 116.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Congratulations!"

[node name="Message" type="Label" parent="End"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = 8.0
offset_right = 1.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Run Time:"

[node name="Time" type="Label" parent="End"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 13.5
offset_top = 8.0
offset_right = 254.5
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "00:00:00"

[node name="Button" type="Button" parent="End"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = 161.0
offset_right = 85.5
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Menu"

[node name="Video" type="Node" parent="."]

[node name="Background" type="TextureRect" parent="Video"]
texture_filter = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_4yval")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="Video"]
offset_top = 98.0
offset_right = 1920.0
offset_bottom = 1186.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
size_flags_vertical = 4
stream = ExtResource("1_xo6lj")
autoplay = true
buffering_msec = 1000

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="pressed" from="End/Button" to="." method="_on_button_pressed"]
[connection signal="finished" from="Video/VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
